deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostAliases:
      - ip: "192.168.0.50"
        hostnames:
        - "pihole.ronneylira.com"
      containers:
      - envFrom:
        - configMapRef:
            name: env-configmap
        - secretRef:
            name: env-secrets
        image: pihole/pihole:2022.04.3
        imagePullPolicy: IfNotPresent
        name: pihole
        ports:
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: dchp
          containerPort: 67
          protocol: UDP
        - name: web
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        resources:
          requests:
            cpu: "40m"
            memory: "70Mi"
          limits:
            cpu: "200m"
            memory: "150Mi"
        readinessProbe:
          exec:
            command: ['dig', '@127.0.0.1', 'pi-hole.net']
          timeoutSeconds: 20
          initialDelaySeconds: 5
          periodSeconds: 60
          failureThreshold: 1
        livenessProbe:
          tcpSocket:
            port: dns-tcp
          initialDelaySeconds: 15
          periodSeconds: 30
        volumeMounts:
          - name: pihole-etc-volume
            mountPath: /etc/pihole/
          - name: pihole-dnsmasqd-volume
            mountPath: /etc/dnsmasq.d/
      - name: cloudflared
        image: visibilityspots/cloudflared:alpine-3.13
        imagePullPolicy: Always
        ports:
        - containerPort: 5054
          protocol: TCP
        - containerPort: 5054
          protocol: UDP
        resources:
          requests:
            cpu: "20m"
            memory: "20Mi"
          limits:
            cpu: "50m"
            memory: "100Mi"
        readinessProbe:
          exec:
            command: ['dig', '-p', '5054', '@127.0.0.1', 'pi-hole.net']
          timeoutSeconds: 20
          initialDelaySeconds: 5
          periodSeconds: 60
          failureThreshold: 2
        livenessProbe:
          exec:
            command: ['dig', '-p', '5054', '@127.0.0.1', 'pi-hole.net']
          initialDelaySeconds: 15
          periodSeconds: 360
          failureThreshold: 2
      restartPolicy: Always
      volumes:
      - name: pihole-etc-volume
        persistentVolumeClaim:
          claimName: pihole-etc-volume
      - name: pihole-dnsmasqd-volume
        persistentVolumeClaim:
          claimName: pihole-dnsmasqd-volume
