services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-web
  namespace: pihole
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
  - protocol: TCP
    port: 80
    name: web
    targetPort: 80
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-tcp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: dns
spec:
  selector:
    app: pihole
  ports:
  - protocol: TCP
    port: 53
    name: dnstcp
    targetPort: 53
  type: LoadBalancer
  loadBalancerIP: 192.168.0.12
  externalTrafficPolicy: Local
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: dns
spec:
  selector:
    app: pihole
  ports:
  - protocol: UDP
    port: 53
    name: dnsudp
    targetPort: 53
  type: LoadBalancer
  loadBalancerIP: 192.168.0.12
  externalTrafficPolicy: Local
